# kato-dashboard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  KATO_ISSUES.md  Makefile  NEXT_STEPS.md.completed  QUICKSTART.md  README.md  UI_REVIEW_SUMMARY.md  build-and-push.sh  bump-version.sh  container-manager.sh  dashboard.sh  docker-compose.prod.yml  docker-compose.yml  populate_symbol_stats.py  pyproject.toml
.github/workflows/: release.yml
backend/: .env.example  .gitignore  Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: clickhouse.py  clickhouse_browser.py  hybrid_patterns.py  mongodb.py  qdrant.py  redis_client.py  symbol_stats.py
backend/app/services/: alert_manager.py  analytics.py  docker_stats.py  hierarchy_analysis.py  kato_api.py  session_events.py  session_manager.py  websocket.py
docs/: DASHBOARD_WEBSOCKET_IMPLEMENTATION.md  KATO_WEBSOCKET_REQUIREMENTS.md
docs/maintenance/: releasing.md  version-management.md
docs/planning-docs/: PHASE3_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  SESSION_STATE.md
docs/planning-docs/completed/: phase3_system_alerts.md  phase4_selective_subscriptions.md
docs/planning-docs/project-manager/: maintenance-log.md  patterns.md  triggers.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlertHistorySidebar.tsx  Card.tsx  ClickHouseBrowser.tsx  KnowledgebaseSidebar.tsx  Layout.tsx  PatternDetailModal.tsx  PatternsPanel.tsx  QdrantBrowser.tsx  RedisBrowser.tsx  SessionEventNotifications.tsx  SessionsBrowser.tsx  StatCard.tsx  SymbolsBrowser.tsx  SystemAlertNotifications.tsx  VectorsPanel.tsx
frontend/src/contexts/: AlertContext.tsx
frontend/src/hooks/: useUnifiedKBList.ts  useWebSocket.ts
frontend/src/lib/: api.ts  logger.ts  utils.ts  websocket.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  DataBrowser.tsx  Databases.tsx  HierarchicalGraph.tsx  NotFound.tsx  Redis.tsx  SessionDetail.tsx  Sessions.tsx  VectorBrowser.tsx
frontend/src/types/: knowledgebase.ts
planning-docs/: ARCHITECTURE.md  DAILY_BACKLOG.md  DECISIONS.md  PHASE_2_SUMMARY.md  PHASE_2_WEBSOCKET_SESSION_EVENTS.md  PROJECT_OVERVIEW.md  SESSION_STATE.md  SPRINT_BACKLOG.md  phase2-vector-visualization-deferred.md  phase3-intra-node-graph-deferred.md  phase4-hierarchical-graph-active.md
planning-docs/project-manager/: maintenance-log.md  patterns.md  pending-updates.md  triggers.md
(+17 files in other folders)
