[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kato-dashboard"
version = "0.1.1"
description = "Comprehensive web-based monitoring and management system for the KATO AI platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sevak Avakians", email = "sevak@avakians.com"}
]
keywords = ["kato", "dashboard", "monitoring", "ai", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sevakavakians/kato-dashboard"
Documentation = "https://github.com/sevakavakians/kato-dashboard#readme"
Repository = "https://github.com/sevakavakians/kato-dashboard"
Issues = "https://github.com/sevakavakians/kato-dashboard/issues"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
